@@ -1,6 +1,10 @@
 package mcjty.lostcities.api;
 
+import mcjty.lostcities.worldgen.lost.cityassets.Palette;
+
 public interface ILostCityBuilding extends ILostCityAsset {
+
+    Palette getLocalPalette();
 
     /**
      * The chance this this building is alone. If 1.0f this building wants to be alone all the time. If 0.0f (default)
